# overcall.app

./: .gitignore  .gitmodules  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.json
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/dev/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/overcall/: OverCallApp.kt
android/app/src/main/kotlin/com/overcall/attestation/: AttestationKind.kt  AttestationResult.kt  KeystoreAttestor.kt
android/app/src/main/kotlin/com/overcall/call/: CallWatcher.kt  PhoneFormatter.kt  SimReader.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/seeker/: AndroidManifest.xml
android/gradle/: libs.versions.toml
config/: devnet.json
dapp-store/: README.md  config.yaml
docs/: emulation.md
docs/superpowers/plans/: 2026-05-05-overcall-mvp.md
programs/faucet/: Cargo.toml
programs/faucet/src/: error.rs  lib.rs  state.rs
programs/faucet/src/instructions/: drip.rs  init_faucet.rs  mod.rs  register_mint.rs  set_admin.rs  set_cooldown.rs  update_mint_drip.rs
programs/mock_swap/: Cargo.toml
programs/mock_swap/src/: error.rs  lib.rs  state.rs
programs/mock_swap/src/instructions/: fund_reserve.rs  init_oracle.rs  mod.rs  set_admin.rs  set_price.rs  swap_and_send.rs
programs/phone_registry/: Cargo.toml
programs/phone_registry/src/: error.rs  lib.rs  state.rs
programs/phone_registry/src/instructions/: init_config.rs  mod.rs  pay_sol.rs  pay_spl_direct.rs  pay_spl_via_swap.rs  register_with_sol_fee.rs  register_with_spl_fee.rs  revoke.rs  rotate_owner.rs  set_admin.rs  set_paused.rs  set_payment_fee_bps.rs  set_registration_fee_sol.rs  set_registration_lifetime.rs  set_spl_fee_config.rs  set_treasury.rs  update_preferences.rs
scripts/: deeplink-web-register.sh  deploy-bootstrap.ts  deploy-devnet.sh  dev-env.sh  grab-attestation-hash.sh  install-app.sh  install-fakewallet.sh  setup-android-emu.sh  sideload-phone.sh  start-emu.sh
tests/: faucet.spec.ts  mock_swap.spec.ts  phone_registry.spec.ts
web/: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
web/src/: App.js  App.tsx  QrScanner.js  QrScanner.tsx  RegisterPage.js  RegisterPage.tsx  main.js  main.tsx  styles.css
web/src/lib/: config.js  config.ts  handoff.js  handoff.ts  phone.js  phone.ts  registerIx.js  registerIx.ts  registryConfig.js  registryConfig.ts
(+43 files in other folders)
