[workspace]
members = ["programs/*"]
resolver = "2"

# Tell rustc's check-cfg that these cfg values used inside solana_program_entrypoint
# and anchor's #[program] / #[derive(Accounts)] macro expansions are expected.
# Without this, every program emits 6 noise warnings on every build.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(feature, values("custom-heap", "custom-panic", "anchor-debug"))',
    'cfg(target_os, values("solana"))',
] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
