[package]
name        = "faucet"
version     = "0.1.0"
edition     = "2021"
description = "OverCall test-token faucet (devnet only)"

[lib]
crate-type = ["cdylib", "lib"]
name       = "faucet"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl  = { version = "1.0.2" }

[lints]
workspace = true
